product/ci/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/issuer: letsencrypt-prod
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "32"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "100m"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        proxy_set_header Upgrade "websocket";
        proxy_set_header Connection "Upgrade";
        proxy_set_header Sec-WebSocket-Extensions "permessage-deflate; client_max_window_bits";
        proxy_set_header Sec-WebSocket-Version "13";
  name: ${project_name}
  namespace: ${namespace}
spec:
  rules:
    - host: ${domain}
      http:
        paths:
          - backend:
              serviceName: ${project_name}
              servicePort: 80
            path: /
#  tls:
#    - hosts:
#        - ${domain}
#      secretName: ${domain}-tls
